testsuite/tests/grammar/invalid_predicate/test.out
== no-dot.lkt ==
no-dot.lkt:4:29: error: Invalid property reference
3 |     @main_rule main_rule <- Example("example") |> when(Example)
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== unknown-node.lkt ==
unknown-node.lkt:4:56: error: Unknown node: NoSuchNode
3 |     @main_rule main_rule <- Example("example") |> when(NoSuchNode.no_such_prop)
  |                                                        ^^^^^^^^^^


== unknown-prop.lkt ==
unknown-prop.lkt:4:29: error: Example has no no_such_prop property
3 |     @main_rule main_rule <- Example("example") |> when(Example.no_such_prop)
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Done
